--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -6,6 +6,15 @@ VAGRANTFILE_API_VERSION = "2"
 
 vagrant_dir = File.expand_path(File.dirname(__FILE__))
 
+$install_bluebox_theme = <<SCRIPT
+wget https://s3.amazonaws.com/horizon-branding/bluebox-u1.1.x.png
+cp bluebox-u1.1.x.png /opt/stack/horizon/static/dashboard/img/logo.png
+mv bluebox-u1.1.x.png /opt/stack/horizon/static/dashboard/img/logo-splash.png
+
+wget https://s3.amazonaws.com/horizon-branding/bluebox.ico
+mv bluebox.ico /opt/stack/horizon/static/dashboard/img/favicon.ico
+SCRIPT
+
 $install_docker = <<SCRIPT
 apt-key adv --keyserver hkp://pgp.mit.edu:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
 echo "deb https://apt.dockerproject.org/repo ubuntu-trusty main" > /etc/apt/sources.list.d/docker.list
@@ -60,6 +69,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       #openstack.vm.hostname = "openstack.stackinabox.io"
 
       openstack.ssh.insert_key = true
+
+      # install bluebox theme
+      openstack.vm.provision "shell", inline: $install_bluebox_theme
 
       # Copy docker registry credentials
       openstack.vm.provision "file", source: "~/.docker/config.json", destination: "/home/vagrant/.docker/config.json"
@@ -137,6 +149,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     end
 
-    config.multihostsupdater.aliases = {'192.168.27.100' => ['openstack.stackinabox.io', 'docker.stackinabox.io', 'heat.stackinabox.io', 'designer.stackinabox.io', 'ucd.stackinabox.io']}
+    config.multihostsupdater.aliases = {'192.168.27.100' => ['openstack.stackinabox.io', 'bluebox.stackinabox.io', 'docker.stackinabox.io', 'heat.stackinabox.io', 'designer.stackinabox.io', 'ucd.stackinabox.io']}
 
 end
