--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -4,30 +4,11 @@
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
 VAGRANTFILE_API_VERSION = "2"
 
+Vagrant.require_version ">= 1.8"
+
 vagrant_dir = File.expand_path(File.dirname(__FILE__))
-
-$install_bluebox_theme = <<SCRIPT
-#wget https://s3.amazonaws.com/horizon-branding/bluebox-u1.1.x.png
-cp /vagrant/scripts/bluebox-theme/logo.png /opt/stack/horizon/static/dashboard/img/logo.png
-cp /vagrant/scripts/bluebox-theme/logo-splash.png /opt/stack/horizon/static/dashboard/img/logo-splash.png
-
-#wget https://s3.amazonaws.com/horizon-branding/bluebox.ico
-#mv bluebox.ico /opt/stack/horizon/static/dashboard/img/favicon.ico
-SCRIPT
-
-$install_docker = <<SCRIPT
-apt-key adv --keyserver hkp://pgp.mit.edu:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
-echo "deb https://apt.dockerproject.org/repo ubuntu-trusty main" > /etc/apt/sources.list.d/docker.list
-apt-get update
-apt-get install -y docker-engine
-SCRIPT
-
-$mirror_docker = <<SCRIPT
-cat > /etc/default/docker <<EOF
-DOCKER_OPTS="--dns 8.8.8.8 --dns 8.8.4.4 --userland-proxy=false --registry-mirror=http://192.168.27.100:4000 --insecure-registry=192.168.27.100:4000"
-EOF
-service docker restart
-SCRIPT
+personalization = File.expand_path(File.join(vagrant_dir, "Personalization"), __FILE__)
+load personalization
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
@@ -54,11 +35,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     end
 
     # disabling the default shared /vagrant folder in this vm
-    config.vm.synced_folder "..", "/vagrant"#, type: "nfs", mount_options: ["nolock", "vers=3", "udp"]
+    config.vm.synced_folder "..", "/vagrant"#, type: "nfs", mount_options: ['rw', 'vers=3', 'tcp', 'nolock']
 
     config.vm.define "openstack" do |openstack|
 
       openstack.vm.box = "stackinabox/openstack"
+      openstack.vm.box_version = ">= 0.1.5.1"
 
       # eth1, this will be OpenStacks's "management" network
       openstack.vm.network "private_network", ip: "192.168.27.100", adapter_ip: "192.168.27.1", netmask: "255.255.255.0", auto_config: true
@@ -70,18 +52,19 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
       openstack.ssh.insert_key = true
 
-      # install bluebox theme
-      openstack.vm.provision "shell", inline: $install_bluebox_theme
+      # install bluebox or openstack theme based on environment variable os_theme setting in Personalization file
+      openstack.vm.provision "shell", name: "install-btheme", path: "../scripts/#{$os_theme}-theme/init.sh"
 
       # Copy docker registry credentials
       openstack.vm.provision "file", source: "~/.docker/config.json", destination: "/home/vagrant/.docker/config.json"
       
       # Install docker
-      openstack.vm.provision "shell", inline: $install_docker
+      openstack.vm.provision "shell", name: "install-docker", path: "../scripts/docker/init.sh"
 
       # run docker registry mirror first
-      openstack.vm.provision "setup_registry", type:"docker" do |d|
+      openstack.vm.provision "setup_registry", type: "docker" do |d|
 
+          d.pull_images "registry:2"
           d.run "registry",
             image: "registry:2",
             daemonize: true,
@@ -91,48 +74,63 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       end
 
       # configure docker to use local registry mirror
-      openstack.vm.provision "shell", inline: $mirror_docker
+      openstack.vm.provision "shell", name: "enable-docker-registry-cache", path: "../scripts/docker/mirror.sh"
 
-      openstack.vm.provision "setup_ucd", type:"docker" do |d|
+      openstack.vm.provision "setup_ucd", type: "docker" do |d|
 
+        d.pull_images "konradkleine/docker-registry-frontend:v2"
 	      d.run "registry-frontend",
 	        image: "konradkleine/docker-registry-frontend:v2",
 	        daemonize: true,
 	        restart: "always",
 	        args: "-p 4080:80 -e ENV_DOCKER_REGISTRY_HOST=192.168.27.100 -e ENV_DOCKER_REGISTRY_PORT=4000 -e ENV_MODE_BROWSE_ONLY=true"
 
-          d.run "patterns_db",
-            image: "postgres:latest",
-            daemonize: true,
-            restart: "always",
-            args: "-e POSTGRES_PASSWORD=aWJtX3VjZHAK -e POSTGRES_USER=ibm_ucdp -e POSTGRES_DATABASE=ibm_ucdp"
+        d.pull_images "postgres:latest"
+        d.run "patterns_db",
+          image: "postgres:latest",
+          daemonize: true,
+          restart: "always",
+          args: "-e POSTGRES_PASSWORD=aWJtX3VjZHAK -e POSTGRES_USER=ibm_ucdp -e POSTGRES_DATABASE=ibm_ucdp"
 
-          d.run "urbancode_deploy",
-            image: "stackinabox/urbancode-deploy:6.2.1.0.ifix01.772195",
-            daemonize: true,
-            restart: "always",
-            args: "-e LICENSE=accept -p 7918:7918 -p 8080:8080 -p 8443:8443"
+        d.pull_images "stackinabox/urbancode-deploy:6.2.1.0.ifix01.772195"
+        d.run "urbancode_deploy",
+          image: "stackinabox/urbancode-deploy:6.2.1.0.ifix01.772195",
+          daemonize: true,
+          restart: "always",
+          args: "-e LICENSE=accept -p 7918:7918 -p 8080:8080 -p 8443:8443"
 
-          d.run "urbancode_patterns_engine",
-            image: "stackinabox/urbancode-patterns-engine:6.2.1.0.748802",
-            daemonize: true,
-            restart: "always",
-            args: "-e PUBLIC_HOSTNAME=192.168.27.100 -e ALLOWED_AUTH_URIS=http://192.168.27.100:5000/v2.0 -p 7000:8000 -p 7003:8003 -p 7004:8004"
+        d.pull_images "stackinabox/urbancode-deploy-agent:6.2.1.1.781554"
+        d.run "urbancode_deploy_agent",
+          image: "stackinabox/urbancode-deploy-agent:6.2.1.1.781554",
+          daemonize: true,
+          restart: "always",
+          args: "-e UCD_SERVER=192.168.27.100 --name localagent"
 
-          d.run "urbancode_patterns_designer",
-            image: "stackinabox/urbancode-patterns-designer:6.2.1.0.748638",
-            daemonize: true,
-            restart: "always",
-            args: "--link patterns_db:database --link urbancode_patterns_engine:engine --link urbancode_deploy:deploy -e WEB_SERVER_HOSTNAME=192.168.27.100 -e KEYSTONE_URL=192.168.27.100 -p 9080:9080 -p 9443:9443 -p 7575:7575"
+        d.pull_images "stackinabox/urbancode-patterns-engine:6.2.1.0.748802"
+        d.run "urbancode_patterns_engine",
+          image: "stackinabox/urbancode-patterns-engine:6.2.1.0.748802",
+          daemonize: true,
+          restart: "always",
+          args: "-e PUBLIC_HOSTNAME=192.168.27.100 -e ALLOWED_AUTH_URIS=http://192.168.27.100:5000/v2.0 -p 7000:8000 -p 7003:8003 -p 7004:8004"
+
+        d.pull_images "stackinabox/urbancode-patterns-designer:6.2.1.0.748638"
+        d.run "urbancode_patterns_designer",
+          image: "stackinabox/urbancode-patterns-designer:6.2.1.0.748638",
+          daemonize: true,
+          restart: "always",
+          args: "--link patterns_db:database --link urbancode_patterns_engine:engine --link urbancode_deploy:deploy -e WEB_SERVER_HOSTNAME=192.168.27.100 -e KEYSTONE_URL=192.168.27.100 -p 9080:9080 -p 9443:9443 -p 7575:7575"
 
       end
 
       openstack.vm.provider :virtualbox do |vb|
           # vb.gui = true
+
+          vb.linked_clone = true# if Vagrant::VERSION =~ /^1.8/
+          
           # Use VBoxManage to customize the VM.
           vb.customize ["modifyvm", :id, "--ioapic", "on"] # turn on I/O APIC
-          vb.customize ["modifyvm", :id, "--cpus", "4"] # set number of vcpus
-          vb.customize ["modifyvm", :id, "--memory", "10240"] # set amount of memory allocated vm memory
+          vb.customize ["modifyvm", :id, "--cpus", "#{$cpus}"] # set number of vcpus
+          vb.customize ["modifyvm", :id, "--memory", "#{$memory}"] # set amount of memory allocated vm memory
           vb.customize ["modifyvm", :id, "--hwvirtex", "on"] # turn on host hardware virtualization extensions (VT-x|AMD-V)
           vb.customize ["modifyvm", :id, "--ostype", "Ubuntu_64"] # set guest OS type
           vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"] # enables DNS resolution from guest using host's DNS
@@ -155,6 +153,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     end
 
-    # config.multihostsupdater.aliases = {'192.168.27.100' => ['openstack.stackinabox.io', 'bluebox.stackinabox.io', 'docker.stackinabox.io', 'heat.stackinabox.io', 'designer.stackinabox.io', 'ucd.stackinabox.io']}
+    config.multihostsupdater.aliases = {'192.168.27.100' => ['openstack.stackinabox.io', 'bluebox.stackinabox.io', 'docker.stackinabox.io', 'heat.stackinabox.io', 'designer.stackinabox.io', 'ucd.stackinabox.io', 'registry.stackinabox.io']}
 
 end
