Don't use domain and host settings in docker compose file

--- a/scripts/docker/compose.yml
+++ b/scripts/docker/compose.yml
@@ -3,8 +3,8 @@ services:
   blueprintdb:
     image: postgres:9.6
     container_name: blueprintdb
-    domainname: stackinabox.io
-    hostname: blueprintdb
+#    domainname: stackinabox.io
+#    hostname: blueprintdb
     environment:
       - POSTGRES_PASSWORD=aWJtX3VjZHAK 
       - POSTGRES_USER=ibm_ucdp 
@@ -15,8 +15,8 @@ services:
   ucd:
     image: stackinabox/urbancode-deploy:6.2.1.1.787880
     container_name: ucd
-    domainname: stackinabox.io
-    hostname: ucd
+#    domainname: stackinabox.io
+#    hostname: ucd
     ports:
       - "7918:7918"
       - "8080:8080"
@@ -28,8 +28,8 @@ services:
   agent:
     image: stackinabox/urbancode-deploy-agent:6.2.1.1.788429
     container_name: agent
-    domainname: stackinabox.io
-    hostname: agent
+#    domainname: stackinabox.io
+#    hostname: agent
     environment:
       - UCD_SERVER=192.168.27.100
       - USE_AS_DEFAULT_FOR_IMPORTS
@@ -39,8 +39,8 @@ services:
   heatengine:
     image: stackinabox/urbancode-patterns-engine:6.2.1.0.748802
     container_name: heatengine
-    domainname: stackinabox.io
-    hostname: heat
+#    domainname: stackinabox.io
+#    hostname: heat
     ports:
       - "8000:8000"
       - "8003:8003"
@@ -55,8 +55,8 @@ services:
   blueprintdesigner:
     image: stackinabox/urbancode-patterns-designer:6.2.1.1.787911
     container_name: blueprintdesigner
-    domainname: stackinabox.io
-    hostname: designer
+#    domainname: stackinabox.io
+#    hostname: designer
     ports:
       - "9080:9080" 
       - "9443:9443" 
@@ -92,8 +92,8 @@ services:
   agent-relay:
       image: stackinabox/urbancode-deploy-agent-relay:6.2.1.1.793046
       container_name: agent-relay
-      domainname: stackinabox.io
-      hostname: agent-relay
+#      domainname: stackinabox.io
+#      hostname: agent-relay
       ports:
         - "20080:20080"
         - "20081:20081"
