--- a/scripts/docker/compose.yml
+++ b/scripts/docker/compose.yml
@@ -3,44 +3,69 @@ services:
   blueprintdb:
     image: postgres:9.6
     container_name: blueprintdb
-#    domainname: stackinabox.io
-#    hostname: blueprintdb
     environment:
       - POSTGRES_PASSWORD=aWJtX3VjZHAK 
       - POSTGRES_USER=ibm_ucdp 
       - POSTGRES_DATABASE=ibm_ucdp
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
+    restart: always
+  ucddb:
+    image: mysql:5.6
+    container_name: ucddb
+    environment:
+      - MYSQL_ROOT_PASSWORD=aWJtX3VjZHAK
+      - MYSQL_USER=ibm_ucd
+      - MYSQL_PASSWORD=passw0rd
+      - MYSQL_DATABASE=ibm_ucd
+    expose:
+      - "3306"
     restart: always
   ucd:
-    image: stackinabox/urbancode-deploy:6.2.1.1.787880
+    image: stackinabox/urbancode-deploy:6.2.1.2.801550
     container_name: ucd
-#    domainname: stackinabox.io
-#    hostname: ucd
+    networks:
+      - ucd
+      - default
     ports:
       - "7918:7918"
       - "8080:8080"
       - "8443:8443"
-    network_mode: "host"
+    expose:
+      - "8080"
+    depends_on:
+      - ucddb
     environment:
       - LICENSE=accept
+      - DATABASE_USER=ibm_ucd
+      - DATABASE_PASS=passw0rd
+      - DATABASE_NAME=ibm_ucd
+      - DATABASE_PORT=3306
+      - DATABASE_HOST=ucddb
+      - DEPLOY_SERVER_URL=http://192.168.27.100:8080
+      - DEPLOY_SERVER_HOSTNAME=192.168.27.100
+      - RCL_URL=27000@licenses.example.com
+      - ADD_CLOUD_AGENT_PKGS=true
     restart: always
   agent:
-    image: stackinabox/urbancode-deploy-agent:6.2.1.1.788429
+    image: stackinabox/urbancode-deploy-agent:6.2.2.0.819509
     container_name: agent
-#    domainname: stackinabox.io
-#    hostname: agent
     environment:
       - UCD_SERVER=192.168.27.100
-      - USE_AS_DEFAULT_FOR_IMPORTS
+      - USE_AS_DEFAULT_FOR_IMPORTS=true
     depends_on:
       - ucd
     restart: always
   heatengine:
-    image: stackinabox/urbancode-patterns-engine:6.2.1.0.748802
+    image: stackinabox/urbancode-patterns-engine:6.2.1.2.801498
     container_name: heatengine
-#    domainname: stackinabox.io
-#    hostname: heat
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /vagrant/envvars.txt:/root/envvars.txt:ro
+    networks:
+      - ucd
+      - default
     ports:
       - "8000:8000"
       - "8003:8003"
@@ -49,19 +74,17 @@ services:
       - "5000"
       - "5672"
       - "35357"
-    environment:
-      - ALLOWED_AUTH_URIS=http://192.168.27.100:5000/v2.0/
     restart: always
   blueprintdesigner:
-    image: stackinabox/urbancode-patterns-designer:6.2.1.1.787911
+    image: stackinabox/urbancode-patterns-designer:6.2.1.2.801569
     container_name: blueprintdesigner
-#    domainname: stackinabox.io
-#    hostname: designer
+    networks:
+      - ucd
+      - default
     ports:
       - "9080:9080" 
       - "9443:9443" 
       - "7575:7575"
-    network_mode: "host"
     depends_on:
       - blueprintdb
       - ucd
@@ -69,31 +92,29 @@ services:
     environment:
       - WEB_SERVER_HOSTNAME=192.168.27.100
       - KEYSTONE_URL=http://192.168.27.100:5000/v2.0/
-      - KEYSTONE_ADMIN_USER=admin 
+      - KEYSTONE_ADMIN_USER=admin
       - KEYSTONE_ADMIN_PASS=labstack
-      - KEYSTONE_ADMIN_TENANT=admin 
-      - KEYSTONE_USER=demo 
-      - KEYSTONE_PASS=labstack 
-      - KEYSTONE_TENANT=demo 
+      - KEYSTONE_ADMIN_TENANT=admin
+      - KEYSTONE_USER=demo
+      - KEYSTONE_PASS=labstack
+      - KEYSTONE_TENANT=demo
       - KEYSTONE_DOMAIN=Default
-      - DATABASE_HOST=192.168.27.100
+      - DATABASE_HOST=blueprintdb
       - DATABASE_PORT=5432
-      - DATABASE_NAME=ibm_ucdp 
-      - DATABASE_USER=ibm_ucdp 
+      - DATABASE_NAME=ibm_ucdp
+      - DATABASE_USER=ibm_ucdp
       - DATABASE_PASS=aWJtX3VjZHAK
       - ENGINE_HOST=192.168.27.100
       - DEPLOY_SERVER_URL=http://192.168.27.100:8080
-      - DOCKER_HOST=192.168.27.100
+      - DOCKER_HOST=192.167.27.100
       - DOCKER_PORT=2376
       - DOCKER_PROTO=http
     restart: always
     volumes:
-      - /vagrant/tutorial/:/opt/ibm-ucd-patterns/opt/tomcat/webapps/landscaper/static/6.2.1.1.787911/js/tutorial/nls/
+      - /vagrant/tutorial/:/opt/ibm-ucd-patterns/opt/tomcat/webapps/landscaper/static/6.2.1.2.801569/js/tutorial/nls/
   agent-relay:
-      image: stackinabox/urbancode-deploy-agent-relay:6.2.1.1.793046
+      image: stackinabox/urbancode-deploy-agent-relay:6.2.2.0.818541
       container_name: agent-relay
-#      domainname: stackinabox.io
-#      hostname: agent-relay
       ports:
         - "20080:20080"
         - "20081:20081"
@@ -101,4 +122,8 @@ services:
       environment:
         - UCD_SERVER=192.168.27.100
       depends_on:
-        - blueprintdesigner
+        - ucd
+      restart: always
+networks:
+  default:
+  ucd:
