--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -61,7 +61,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.define "openstack" do |openstack|
 
       openstack.vm.box = "stackinabox/openstack"
-      openstack.vm.box_version = ">= 0.1.5.6"
+      openstack.vm.box_version = ">= 0.2.2"
+#      openstack.vm.box = "stackinabox.box"
 
       # eth1, this will be OpenStacks's "management" network
       openstack.vm.network "private_network", ip: "192.168.27.100", adapter_ip: "192.168.27.1", netmask: "255.255.255.0", auto_config: true
@@ -90,7 +91,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         openstack.vm.provision :docker_compose, 
       	  yml: "/vagrant/scripts/docker/compose.yml",
           command_options: { up: "-d --timeout 10"}, 
-          run: "always"
+          run: "always",
+          project_name: "urbancode",
+          compose_version: "1.8.0"
       else
       	print "\n"
         print "vagrant-docker-compose plugin has not been found.\n"
@@ -134,13 +137,13 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     end
 
-    if Vagrant.has_plugin?("vagrant-multi-hostsupdater")
-      config.multihostsupdater.aliases = {'192.168.27.100' => ['openstack.stackinabox.io', 'bluebox.stackinabox.io', 'docker.stackinabox.io', 'heat.stackinabox.io', 'designer.stackinabox.io', 'ucd.stackinabox.io', 'registry.stackinabox.io', 'docker.stackinabox.io', 'agent.stackinabox.io', 'blueprintdb.stackinabox.io']}
-    else
-        print "\n"
-        print "vagrant-multi-hostsupdater plugin has not been found.\n"
-        print "Please install it by running `vagrant plugin install vagrant-multi-hostsupdater`\n"
-        exit 22
-    end
+    # if Vagrant.has_plugin?("vagrant-multi-hostsupdater")
+    #   config.multihostsupdater.aliases = {'192.168.27.100' => ['openstack.stackinabox.io', 'bluebox.stackinabox.io', 'docker.stackinabox.io', 'heat.stackinabox.io', 'designer.stackinabox.io', 'ucd.stackinabox.io', 'registry.stackinabox.io', 'docker.stackinabox.io', 'agent.stackinabox.io', 'blueprintdb.stackinabox.io']}
+    # else
+    #     print "\n"
+    #     print "vagrant-multi-hostsupdater plugin has not been found.\n"
+    #     print "Please install it by running `vagrant plugin install vagrant-multi-hostsupdater`\n"
+    #     exit 22
+    # end
 
 end
